--- a/tuff_city_jitsu_club_client/package.json
+++ b/tuff_city_jitsu_club_client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuff_cty_jitsu_club",
+  "name": "tuff_city_jitsu_club",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
