--- a/tuff_city_jitsu_club_client/package.json
+++ b/tuff_city_jitsu_club_client/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-confirmation": "^1.0.4",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
+    "react-native-htmlview": "^0.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
@@ -42,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-react": "^7.14.5"
   }
 }
